	Fixed bug where the image plugin wouldn't update the style if the user closed the dialog before focusing out. Patch contributed by jonparrott.
	Fixed bug where bindOnReady in EventUtils wouldn't work properly for some edge cases on older IE versions. Patch contributed by Godefroy.
	Fixed so the link dialog "text to display" field gets automatically hidden if the selection isn't text contents. Patch contributed by Godefroy.
	Fixed so the none option for the target field in the link dialog gets excluded when specifiying the target_list config option.
	Fixed so outline styles are displayed by default in the formats preview. Patch contributed by nhammadi.
	Fixed so the max characters for width/height is more than 3 in the media and image dialogs.
	Fixed so the old mceSpellCheck command toggles the spellchecker on/off.
	Fixed so the setupeditor event is fired before the setup callback setting to ease up compatibility with 3.x.
	Removed the custom scrollbars for WebKit since the default browser scrollbars looks a lot better now days.
Version 4.0.12 (2013-12-18)
	Added new media_scripts option to the media plugin. This makes it possible to embed videos using script elements.
	Fixed bug where WebKit/Blink would produce random span elements and styles when deleting contents inside the editor.
	Fixed bug where WebKit/Blink would produce span elements out of link elements when they where removed by the unlink command.
	Fixed bug where div block formats in inline mode where applied to all paragraphs within the editor.
	Fixed bug where div blocks where marked as an active format in inline mode when doing non collapsed selections.
	Fixed bug where the importcss plugin wouldn't append styles if the style_formats option was configured.
	Fixed bug where the importcss plugin would import styles into groups multiple times for different format menus.
	Fixed bug where the paste plugin wouldn't properly remove the paste bin element on IE if a tried to paste a file.